<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformacionUtilFragment"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="horizontal"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    app:cardCornerRadius="20dp"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/rojo"

                        >
                        <ImageView
                            android:id="@+id/IvCllegar"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_centerInParent="true"
                            />
                        <TextView
                            android:id="@+id/txtCllegar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Cllegar"
                            android:textSize="30sp"
                            android:layout_centerInParent="true"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:layout_marginTop="3dp"
                            />
                        <Button
                            android:id="@+id/btnCllegar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="horizontal"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    app:cardCornerRadius="20dp"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/rojo"

                        >
                        <ImageView
                            android:id="@+id/IvHoteles"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_centerInParent="true"
                            />
                        <TextView
                            android:id="@+id/txtHoteles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Hoteles"
                            android:textSize="30sp"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:layout_marginTop="3dp"
                            />
                        <Button
                            android:id="@+id/btnHoteles"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="horizontal"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    app:cardCornerRadius="20dp"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/rojo"

                        >
                        <ImageView
                            android:id="@+id/Ivinteres"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_centerInParent="true"
                            />
                        <TextView
                            android:id="@+id/txtinteres"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Interes"
                            android:textSize="30sp"
                            android:gravity="center"
                            android:layout_centerInParent="true"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:layout_marginTop="3dp"
                            />
                        <Button
                            android:id="@+id/btnInteres"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>